# servis

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  VISTAS.cpp  VISTAS_server.skeleton.cpp  servis  vistasServer.cpp  vistasServer.h
browser/: index.html
dependencies_h/: index.js  server.js  servis.thrift  testThriftServer.js
dependencies_h/gen-cpp/: VISTAS.cpp  VISTAS.h  VISTAS_server.skeleton.cpp  servis_constants.cpp  servis_constants.h  servis_types.cpp  servis_types.h
dependencies_h/gen-nodejs/: VISTAS.js  servis_types.js
test/: CMakeLists.txt  PluginsTest.cpp  PluginsTest.h  SHP3DStartupTest.cpp  SHP3DStartupTest.h  SimpleTestCase.cpp  SimpleTestCase.h  main.cpp
